Fixing wrap in album

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ img {
   display: inline-block;
 }
 .top-album {
-  padding-top: 6px;
+  padding-top: 5.5px;
   position: relative;
   width: 130px;
 }
